# agentkernel

./: .gitignore  BENCHMARK.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  Package.swift  README.md  RELEASE.md  SECURITY.md  install.sh  mkdocs.yml  spec.md
.beads/: issues.jsonl
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  docs.yml  release.yml  sdk-publish.yml
api/: openapi.yaml
benchmark-results/: .gitkeep
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/.claude/commands/: sandbox.md
claude-plugin/.claude/skills/agentkernel/: SKILL.md
claude-plugin/commands/: sandbox.md
claude-plugin/skills/sandbox/: SKILL.md
deploy/helm/agentkernel/: Chart.yaml  values.yaml
deploy/helm/agentkernel/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/nomad/: agentkernel.nomad.hcl
docker/: Dockerfile.kvm-host  README.md  entrypoint.sh
docs/: Gemfile  _config.yml  agent-claude.md  agent-codex.md  agent-gemini.md  agent-opencode.md  agents.md  api-http.md  api-mcp.md  api-openapi.md  api.md  benchmarks.md  changelog.md  cmd-create.md  cmd-exec-attach.md  cmd-list.md  cmd-run.md  cmd-start-stop.md  commands.md  comparisons.md  compliance-mapping.md  config-backends.md  config-security.md  config-toml.md  configuration.md  getting-started.md  hyperlight-rfc.md  index.md  installation.md  openapi.yaml  sdk-golang.md  sdk-nodejs.md  sdk-python.md  sdk-rust.md  sdk-swift.md  sdks.md
docs/_data/: topnav.yml
docs/_data/sidebars/: agentkernel_sidebar.yml
docs/agents/: claude-code.md  index.md
docs/api/: http-api.md  mcp-server.md
docs/commands/: exec-attach.md  index.md  list.md  start-stop.md
docs/configuration/: backends.md  index.md  security-profiles.md
examples/: README.md
examples/agents/: README.md
examples/agents/claude-code/: Dockerfile  README.md  agentkernel.toml
examples/agents/codex/: Dockerfile  README.md  agentkernel.toml
examples/agents/gemini/: Dockerfile  README.md  agentkernel.toml
examples/agents/opencode/: Dockerfile  README.md  agentkernel.toml
examples/bash-app/: agentkernel.toml  server.sh
examples/c-app/: agentkernel.toml  server.c  server.cpp
examples/dotnet-app/: Program.cs  agentkernel.toml
examples/error-app/: agentkernel.toml
examples/go-app/: agentkernel.toml  main.go
examples/java-app/: Server.java  agentkernel.toml
examples/node-app/: agentkernel.toml  server.js
examples/python-app/: agentkernel.toml  app.py
examples/ruby-app/: agentkernel.toml  server.rb
examples/rust-app/: agentkernel.toml  main.rs
examples/typescript-app/: agentkernel.toml  server.ts
examples/wasm/: README.md  calc.wat  fib.wat  hello.wat
guest-agent/: Cargo.toml  README.md
guest-agent/src/: main.rs  pty.rs
images/: README.md
images/kernel/: microvm.config
images/seccomp/: ai-agent.json  default.json  moderate.json  restrictive.json
plan/: 01-file-upload.md  02-dockerfile-support.md  03-access-policies.md  04-enterprise-policies.md  05-agent-integration.md  06-agent-in-sandbox.md  SaaSify.md  apple-containers.md  client-libraries.md  daemon-mode.md  firecracker-pivot.md  hyperlight-rfc.md  orchestration.md  plugin-install.md  testing-plan.md
plugins/codex/: README.md  mcp.json
plugins/gemini/: README.md
plugins/mcp/: README.md
plugins/opencode/: README.md
plugins/opencode/.opencode/plugins/: agentkernel.ts
scripts/: benchmark.sh  run-examples.sh  stress-test.sh  test-e2e.sh
sdk/golang/: README.md  agentkernel.go  agentkernel_test.go  errors.go  go.mod  sandbox.go  stream.go  types.go
sdk/golang/examples/quickstart/: main.go
sdk/golang/examples/sandbox/: main.go
sdk/nodejs/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
sdk/nodejs/examples/: quickstart.ts  sandbox-session.ts  streaming.ts
sdk/nodejs/src/: client.ts  config.ts  errors.ts  index.ts  sandbox.ts  sse.ts  types.ts
sdk/nodejs/tests/: client.test.ts  sse.test.ts
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/examples/: async_example.py  quickstart.py  sandbox_session.py  streaming.py
sdk/python/src/agentkernel/: __init__.py  _config.py  async_client.py  client.py  errors.py  sse.py  types.py
sdk/python/tests/: test_async_client.py  test_client.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/: configuration.rs  quickstart.rs  sandbox_guard.rs
sdk/rust/src/: client.rs  error.rs  lib.rs  types.rs
sdk/rust/tests/: client_test.rs
sdk/swift/: .gitignore  Package.swift  README.md
sdk/swift/Examples/: quickstart.swift  sandbox.swift
sdk/swift/Sources/AgentKernel/: AgentKernel.swift  Configuration.swift  Errors.swift  SSE.swift  SandboxSession.swift  Types.swift
sdk/swift/Tests/AgentKernelTests/: AgentKernelTests.swift
src/: agents.rs  apple_backend.rs  asciicast.rs  audit.rs  build.rs  config.rs  docker.rs  docker_backend.rs  firecracker_client.rs  http_api.rs  hyperlight_backend.rs  languages.rs  lib.rs  main.rs  mcp.rs  permissions.rs  plugin_installer.rs  pool.rs  rootfs.rs  sandbox_pool.rs  seatbelt.rs  setup.rs  validation.rs  vmm.rs  vsock.rs
src/backend/: apple.rs  docker.rs  firecracker.rs  hyperlight.rs  kubernetes.rs  kubernetes_operator.rs  kubernetes_pool.rs  mod.rs  nomad.rs  nomad_pool.rs
src/daemon/: client.rs  health.rs  mod.rs  pool.rs  protocol.rs  server.rs
src/identity/: mod.rs  oidc.rs
src/policy/: audit.rs  cache.rs  cedar.rs  client.rs  mod.rs  signing.rs  streaming.rs  tenant.rs
tests/: benchmark_test.rs  cli_test.rs  enterprise_policy_test.rs  file_operations_test.rs  hyperlight_benchmark.rs  kubernetes_integration_test.rs  nomad_integration_test.rs  pool_benchmark.rs  sandbox_lifecycle_test.rs  sandbox_pool_benchmark.rs  stress_test.rs
