[package]
name = "agentkernel"
version = "0.1.0"
edition = "2024"
description = "Run AI coding agents in secure, isolated microVMs"
authors = ["Paul Shortridge <thrashr888@gmail.com>"]
license = "MIT"
repository = "https://github.com/thrashr888/agentkernel"
keywords = ["ai", "agents", "sandbox", "firecracker", "microvm"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.0"
