[package]
name = "agentkernel"
version = "0.1.0"
edition = "2024"
description = "Run AI coding agents in secure, isolated microVMs"
authors = ["Paul Thrasher <thrashr888@gmail.com>"]
license = "MIT"
repository = "https://github.com/thrashr888/agentkernel"
keywords = ["ai", "agents", "sandbox", "firecracker", "microvm"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
hyper = { version = "1.5", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "process", "net"] }
toml = "0.8"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Unix socket support for Firecracker API
[target.'cfg(unix)'.dependencies]
hyperlocal = "0.9"
tokio-vsock = "0.6"

[dev-dependencies]
tempfile = "3.0"
