[package]
name = "agentkernel"
version = "0.1.2"
edition = "2024"
description = "Run AI coding agents in secure, isolated microVMs"
authors = ["Paul Thrasher <thrashr888@gmail.com>"]
license = "MIT"
repository = "https://github.com/thrashr888/agentkernel"
keywords = ["ai", "agents", "sandbox", "firecracker", "microvm"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []
hyperlight = ["dep:hyperlight-host"]

[dependencies]
anyhow = "1.0"
bytes = "1.0"
clap = { version = "4.0", features = ["derive"] }
hyper = { version = "1.5", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "process", "net"] }
toml = "0.8"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Unix socket support for Firecracker API
[target.'cfg(unix)'.dependencies]
hyperlocal = "0.9"
tokio-vsock = "0.6"

# Hyperlight for sub-millisecond Wasm sandboxes (Linux only, requires KVM)
[target.'cfg(target_os = "linux")'.dependencies]
hyperlight-host = { version = "0.12", optional = true }

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
