[package]
name = "agentkernel-guest"
version = "0.1.0"
edition = "2021"
description = "Guest agent for agentkernel microVMs"
authors = ["Paul Thrasher <thrashr888@gmail.com>"]
license = "MIT"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "io-util", "sync", "process", "time", "macros"] }
tokio-vsock = "0.6"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"  # Optimize for size
strip = true
panic = "abort"
