[package]
name = "agentkernel-guest"
version = "0.1.0"
edition = "2021"
description = "Guest agent for agentkernel microVMs"
authors = ["Paul Thrasher <thrashr888@gmail.com>"]
license = "MIT"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
libc = "0.2"
nix = { version = "0.29", features = ["fs", "process", "signal", "term"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "io-util", "sync", "process", "time", "macros", "fs", "signal"] }
tokio-vsock = "0.6"
uuid = { version = "1.0", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"  # Optimize for size
strip = true
panic = "abort"
