[package]
name = "agentkernel-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Rust SDK for agentkernel — run AI coding agents in secure, isolated microVMs"
license = "MIT"
repository = "https://github.com/thrashr888/agentkernel/tree/main/sdk/rust"
homepage = "https://github.com/thrashr888/agentkernel"
keywords = ["agentkernel", "sandbox", "microvm", "ai", "firecracker"]
categories = ["api-bindings", "development-tools"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
thiserror = "2"
futures = "0.3"
eventsource-stream = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
